# alas-launcher

./: Cargo.toml  Info.plist  README.md  README_en.md  clean_pyc.py  deploy.unix-cn.yaml  deploy.unix.yaml  deploy.windows-cn.yaml  deploy.windows.yaml  pip_hook.py  requirements.in  requirements.txt  tauri.conf.json
.github/workflows/: package.yml
examples/: proc.rs
icons/: icon.icns
src/: backend.rs  main.rs  setup.rs  window_util.rs
